# literature-topic-agent

./: .gitignore  README.md  pyproject.toml
apps/: cli.py
config/: ccf_overrides.json  ccf_venues.json  example_topic.yaml
core/: __init__.py  logging.py  ranking.py
domain/: deduplication.py  models.py  normalization.py
download/: __init__.py  artifacts.py  candidate_builder.py  downloader.py  interfaces.py  naming.py  pdf.py
exporters/: markdown.py
literature_topic_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
parse/: __init__.py  artifacts.py  page_model.py  parser_service.py  pdf_loader.py  reference_parser.py  section_detector.py  section_normalizer.py  section_splitter.py  text_cleaner.py  text_extractor.py
providers/: __init__.py  ccf.py  citations.py  dblp.py  dblp_bibtex.py  google_scholar.py  interfaces.py  search.py  semantic_scholar.py
storage/: json_store.py  sqlite_store.py
summarize/: __init__.py  analyzer.py  llm_client.py  mimo_client.py  prompts.py  renderer.py  schemas.py  taxonomy.py  workflow.py
templates/: topic_summary.md.j2
tests/: test_analysis_renderer.py  test_ccf.py  test_dblp_bibtex.py  test_dblp_provider.py  test_deduplication.py  test_discovery_workflow.py  test_double_check_workflow.py  test_exporter.py  test_google_scholar_provider.py  test_mimo_client.py  test_normalization.py  test_parse_artifacts.py  test_parse_workflow.py  test_parser_service.py  test_pdf_downloader.py  test_prompts.py  test_rank_repair.py  test_ranking.py  test_reference_parser.py  test_search_provider.py  (+7 more)
(+21 files in other folders)
